<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.DetailMovieFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintGuide_percent="0.3"
                android:orientation="vertical" />


            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/poster"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/poster_movie"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:adjustViewBounds="true"
                tools:srcCompat="@tools:sample/avatars" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floatingButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:contentDescription="@string/add_favourite"
                android:focusable="true"
                app:layout_constraintBottom_toTopOf="@+id/nameMovie"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_editor_absoluteX="10dp"
                app:layout_editor_absoluteY="10dp"
                app:srcCompat="@drawable/star_false" />


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textNameMovie"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/poster" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/nameMovie"
                android:textSize="16sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="Movie nameMovie nameMovie nameMovie nameMovie name"
                app:layout_constraintStart_toEndOf="@id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/poster" />


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textVote"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vote"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameMovie" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/voteAverage"
                android:textSize="16sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="7.5"
                app:layout_constraintStart_toEndOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/nameMovie" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textReleaseDate"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/release_date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/voteAverage" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/releaseDate"
                android:textSize="16sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="2000.11.11"
                app:layout_constraintStart_toEndOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/voteAverage" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textDescription"
                android:textStyle="bold"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/releaseDate"
                android:text="@string/description" />


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/description"
                android:textSize="16sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="Movie description Movie description Movie description Movie description Movie description Movie description Movie description Movie description Movie description Movie description Movie description Movie description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textDescription" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewDetail"
                app:layout_constraintTop_toBottomOf="@+id/description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:nestedScrollingEnabled="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>


</ScrollView>